syntax = "proto3";

package command_service;

message GrpcRequest {
    string server_key = 1;
    string server_value = 2;
}


message GrpcReply {
    string message = 1;
}


service Contact {
    rpc GetContact (GrpcRequest) returns (GrpcReply) {}
}
